--- a/apps/docs/src/docs/configuration.mdx
+++ b/apps/docs/src/docs/configuration.mdx
@@ -78,8 +78,14 @@ The directory where the output will be located.
 The directory where the components are located.
 </ApiField>
 
-<ApiField name="scriptDescriptor" type="string" defaultValue="script">
-Specifies the prefix used for file extensions that indicate a script dependency of a template.
+<ApiField name="scriptsExtension" type="string" defaultValue="script.ts">
+Specifies the extension of the script files. This is used to identify the script files in the components directory.
+
+All files with the specified extension will be treated as script files to be included in the page and are not rendered as components.
+
+The dependencies of the script files are automatically resolved and included in the page.
+
+The default value is `script.ts`, and it is strongly reccomended that if you change this value you keep a unique descriptor to avoid conflicts with other files.
 </ApiField>
 
 <ApiField name="robotsTxt" type="RobotsPreferences" defaultValue={`{ "*": [], Googlebot: ["/public/assets/images/"] }`}>
