--- a/apps/docs-lite-elements/src/pages/docs/decorators/query-selector.mdx
+++ b/apps/docs-lite-elements/src/pages/docs/decorators/query-selector.mdx
@@ -1,4 +1,12 @@
 import { CodeBlock } from '@/components/code-block/code-block.kita';
+import { DocsLayout } from '@/layouts/docs-layout';
+
+export const layout = DocsLayout;
+
+export const getMetadata = () => ({
+  title: 'Docs | @querySelector',
+  description: 'The place to learn about Eco Pages',
+})
 
 # @querySelector
 ---
