--- a/apps/docs-lite-elements/src/pages/docs/getting-started/introduction.mdx
+++ b/apps/docs-lite-elements/src/pages/docs/getting-started/introduction.mdx
@@ -1,3 +1,12 @@
+import { DocsLayout } from '@/layouts/docs-layout';
+
+export const layout = DocsLayout;
+
+export const getMetadata = () => ({
+  title: 'Docs | Introduction',
+  description: 'The place to learn about Eco Pages',
+})
+
 # Introduction
 ---
 
