--- a/apps/docs-lite-elements/src/pages/docs/mixins/with-kita.mdx
+++ b/apps/docs-lite-elements/src/pages/docs/mixins/with-kita.mdx
@@ -1,4 +1,6 @@
 import { CodeBlock } from '@/components/code-block/code-block.kita';
+import { DocsLayout } from '@/layouts/docs-layout';
+export const layout = DocsLayout;
 
 # WithKita
 ---
