--- a/apps/docs/src/pages/docs/getting-started/configuration.mdx
+++ b/apps/docs/src/pages/docs/getting-started/configuration.mdx
@@ -1,5 +1,13 @@
 import { CodeBlock } from '@/components/code-block/code-block.kita';
 import { ApiField } from '@/components/api-field/api-field.kita';
+import { DocsLayout } from '@/layouts/docs-layout';
+
+export const layout = DocsLayout;
+
+export const getMetadata = () => ({
+  title: 'Docs | Configuration',
+  description: 'The place to learn about Eco Pages',
+})
 
 # Configuration
 ---
