feature/17-review-lite-elements-context updating context logic

--- a/apps/docs-lite-elements/src/pages/docs/context/context-provider.mdx
+++ b/apps/docs-lite-elements/src/pages/docs/context/context-provider.mdx
@@ -27,7 +27,7 @@ export type MyContext = typeof myContext;
 @customElement("lite-my-context")
 export class LitePackageContext extends LiteContext<MyContext> {
   protected override name = litePackageContext.name;
-  protected override state = litePackageContext.initialValue!;
+  protected override context = litePackageContext.initialValue!;
 }`}
 </CodeBlock>
 
