feature/17-review-lite-elements-context updated docs

--- a/apps/docs-lite-elements/src/pages/docs/core/lite-element.mdx
+++ b/apps/docs-lite-elements/src/pages/docs/core/lite-element.mdx
@@ -17,7 +17,7 @@ Please note that this class is not meant to be used directly. Instead, you shoul
 
 You can use the `@customElement` decorator to define a custom element.
 
-Go to the [Decorator Section](/docs/custom-element) to see all the available decorators.
+Go to the [Decorator Section](/docs/decorators/custom-element) to see all the available decorators.
 
 <CodeBlock lang='typescript'>{`@customElement('lc-demo')
 export class MyElement extends LiteElement {}`}
