--- a/apps/docs-lite-elements/src/pages/docs/context/context-provider.mdx
+++ b/apps/docs-lite-elements/src/pages/docs/context/context-provider.mdx
@@ -4,35 +4,44 @@ import { DocsLayout } from '@/layouts/docs-layout';
 export const layout = DocsLayout;
 
 export const getMetadata = () => ({
-  title: 'Docs | Lite Context Provider',
+  title: 'Docs | Context Provider',
   description: 'The place to learn about Eco Pages',
 })
 
-# Lite Context Provider
+# @provideContext
 ---
 
-To be able to use the LiteContext, you need to create a new class, the provider, that extends the LiteContext class and define the state of the context.
+To provide a context to a component, you can use the `@provideContext` decorator. This decorator takes an object with the following properties:
 
-Then you can wrap your components in the context provider and use a set of utility decorators to register a subscription or use the context.
+- `context`: The context object that you want to provide.
+- `initialValue`: The initial value of the context.
 
-To create the context definition, you can use the createContext function that takes a name and a state object as arguments.
-
-<CodeBlock lang='typescript'>{`export const myContext = createContext("my-context", {
-  name: "eco-pages",
-  version: 0.1,
-});
-
-export type MyContext = typeof myContext;
-
-@customElement("lite-my-context")
-export class LitePackageContext extends LiteContext<MyContext> {
-  protected override name = litePackageContext.name;
-  protected override context = litePackageContext.initialValue!;
+<CodeBlock lang='typescript'>{`@customElement("lite-my-context")
+export class MyElement extends LiteElement {
+  @provideContext({ context: myContext, initialValue: {  value: "Hello World" }})
+  provider!: LiteContext<typeof myContext>;
 }`}
 </CodeBlock>
 
-### Usage
+Once you have a context provider, all the children of the provider will have access to the context.
+Please note that the provider must be a parent of the consumer.
 
-<CodeBlock lang='typescript'>{`<lite-my-context>
-  <lite-my-consumer></lite-my-consumer>
-</lite-my-context>`}</CodeBlock>
+To read the documentation relative to the consumer, click [here](/docs/context/context-consumer).
+
+<CodeBlock lang='typescript'>{`<my-element-provider>
+  <my-element-consumer></my-element-consumer>
+</my-element-provider>`}</CodeBlock>
+
+If for any reason you don't want to use the `@provideContext` decorator, you can use the `LiteContext` component directly.
+
+<CodeBlock lang='typescript'>{`@customElement("lite-my-context")
+export class MyElement extends LiteElement {
+  provider = new LiteContext<typeof todoContext>(this, {
+    context: todoContext,
+    initialValue: {
+      todos: [],
+      count: 0,
+    },
+  });
+}`}
+</CodeBlock>
