--- a/apps/docs-lite-elements/src/pages/docs/context/lite-context.mdx
+++ b/apps/docs-lite-elements/src/pages/docs/context/lite-context.mdx
@@ -11,11 +11,14 @@ export const getMetadata = () => ({
 # Lite Context
 ---
 
-LiteContext is a lightweight class that permits you to share context with other components in a similar way to React's Context API.
-It provides a simple way to create and manage data and methods that can be shared across the application.
+Lite Context is a way to share data between components without having to pass props down through the component tree.
 
-It is based on the official [proposal](github.com/webcomponents-cg/community-protocols/blob/main/proposals/context.md#definitions) for a context API for Web Components.
+It is based on the [community protocols proposal](https://github.com/webcomponents-cg/community-protocols/blob/main/proposals/context.md).
 
-It is a simple class that you can extend to create your own context provider.
+## Creating a Context
 
-Then you can use the `@useContext` or `@subscribe` decorator to register a subscription or use the context.
+To create a context you can use the `createContext` function. This function takes a generic type that represents the type of the context.
+
+<CodeBlock lang='typescript'>{`export const myContext = createContext<{ value: string }>(Symbol('my-context'));`}</CodeBlock>
+
+Please read the [context provider documentation](/docs/context/context-provider) to learn how to provide a context to a component and the [context consumer documentation](/docs/context/context-consumer) to learn how to consume it.
