--- a/apps/docs-lite-elements/src/pages/docs/examples/lite-counter.mdx
+++ b/apps/docs-lite-elements/src/pages/docs/examples/lite-counter.mdx
@@ -25,7 +25,7 @@ This is a simple counter component that increments and decrements a number.
 ### Features
 
 - Increment and decrement a number
-- Uses the [@property](/docs/property) decorator to define a property
+- Uses the [@reactiveProp](/docs/reactive-prop) decorator to define a property
 - Uses the [@querySelector](/docs/query-selector) decorator to query for an element
 - Uses the [@onEvent](/docs/on-event) decorator to listen for events
 - Uses the [@onUpdated](/docs/on-updated) decorator to update the text content of the element
@@ -47,7 +47,7 @@ This is a simple counter component that increments and decrements a number.
 
 <CodeBlock lang='typescript'>{`@customElement("lite-counter")
 export class LiteCounter extends LiteElement {
-  @property({ type: Number }) count = 0;
+  @reactiveProp({ type: Number }) count = 0;
   @querySelector("[data-text]") countText!: HTMLElement;
 
   @onEvent({ target: "[data-decrement]", type: "click" })
