--- a/apps/docs-lite-elements/src/pages/docs/examples/lite-counter.mdx
+++ b/apps/docs-lite-elements/src/pages/docs/examples/lite-counter.mdx
@@ -33,7 +33,7 @@ This is a simple counter component that increments and decrements a number.
 
 ### Html Markup
 
-<CodeBlock lang="html">{`<lite-counter class="lite-counter" count="5">
+<CodeBlock lang="jsx">{`<lite-counter class="lite-counter" count="5">
   <button type="button" data-decrement aria-label="Decrement" class="lite-counter__decrement">
     -
   </button>
