--- a/apps/docs-lite-elements/src/pages/docs/examples/lite-todo-app.mdx
+++ b/apps/docs-lite-elements/src/pages/docs/examples/lite-todo-app.mdx
@@ -37,7 +37,7 @@ Let's check it together.
 
 <LiteTodoApp count={5} />
 
-### Jsx Markup
+## Jsx Markup
 
 This is the jsx markup of the `LiteTodoApp` component.
 
@@ -88,7 +88,7 @@ Since hydrate will merge the data with the initial value, you can pass only the 
 </lite-todo-app>
 `}</CodeBlock>
 
-### Typescript
+## Typescript
 
 In this first snippet we have the `lite-todo-app` component that is responsible for managing the todos.
 
