--- a/apps/docs/src/pages/docs/guides/creating-pages.mdx
+++ b/apps/docs/src/pages/docs/guides/creating-pages.mdx
@@ -6,3 +6,14 @@ export const getMetadata = () => ({
   title: 'Docs | Creating Pages',
   description: 'The place to learn about Eco Pages',
 })
+
+# Building a page
+
+There are several you can use to build a page in Eco Pages, it mostly depends on the integrations you are using.
+
+Currently the following integrations are supported:
+
+- [`@eco-pages/kitajs`](/docs/integrations/kitajs)
+- [`@eco-pages/lit`](/docs/integrations/lit)
+- [`@eco-pages/mdx`](/docs/integrations/mdx)
+- [`@eco-pages/react`](/docs/integrations/react)
